<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.estadovirtual.promulher.Home">

    TextView
    android:text="Home"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:weightSum="100">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="16.66"
            android:text="@string/action_1"
            android:id="@+id/button_action_1"
            android:layout_gravity="center_horizontal"
            android:background="#eee2d8"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:fontFamily="Open Sans"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16.66"
            android:text="@string/action_2"
            android:id="@+id/button_action_2"
            android:layout_gravity="center_horizontal"
            android:background="#ffc6c9cb"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:fontFamily="Open Sans"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16.66"
            android:text="@string/action_3"
            android:id="@+id/button_action_3"
            android:layout_gravity="center_horizontal"
            android:background="#7fa99e"
            android:layout_marginBottom="10dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:fontFamily="Open Sans"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16.66"
            android:text="@string/action_4"
            android:id="@+id/button_action_4"
            android:layout_gravity="center_horizontal"
            android:background="#cb7418"
            android:layout_marginBottom="10dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:fontFamily="Open Sans"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16.66"
            android:text="@string/action_5"
            android:id="@+id/button_action_5"
            android:layout_gravity="center_horizontal"
            android:background="#c53b18"
            android:layout_marginBottom="10dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:fontFamily="Open Sans"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16.66"
            android:text="@string/action_6"
            android:id="@+id/button_action_6"
            android:layout_gravity="center_horizontal"
            android:background="#711714"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:fontFamily="Open Sans"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp" />
    </LinearLayout>
</RelativeLayout>
